--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "mehdikarbitou@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "twig/twig": "^3.22"
+    }
 }
